# plantary

./: .env.example  .gitignore  .gitpod.yml  README.md  body.3eae03cd.css  body.3eae03cd.css.map  body.cac429e3.css  body.cac429e3.css.map  body.cac429e3.js  body.cac429e3.js.map  heading.e8e52cc1.css  heading.e8e52cc1.css.map  heading.ea5a0358.css  heading.ea5a0358.css.map  heading.ea5a0358.js  heading.ea5a0358.js.map  index.html  intake.html  package.json  plantary.60df39e3.css  plantary.60df39e3.css.map  plantary.a506c6dc.css  plantary.a506c6dc.css.map  plantary.a506c6dc.js  plantary.a506c6dc.js.map  plantary.b7b524a0.css  plantary.b7b524a0.css.map  scripts.cd665a19.js  scripts.cd665a19.js.map  scripts.d13400f9.js  scripts.d13400f9.js.map  src.0b331872.js  src.0b331872.js.map  src.0d97edda.js  src.0d97edda.js.map  src.e31bb0bc.js  src.e31bb0bc.js.map  styles.b61e60ae.css  styles.b61e60ae.css.map  styles.b61e60ae.js  (+3 more)
contracts/rust/: Cargo.toml  README.md  build.sh
contracts/rust/src/: constants.rs  lib.rs  token_bank.rs
mintingAssets/: moneyplant01.txt  moneyplant02.txt  oracleplant01.txt  oracleplant02.txt  portraitplant01.txt
mintingUI/: index.html  plant.html
mintingUI/js/: scripts.js
src/: App.js  Home.js  Plants.js  Veggies.js  config.js  index.html  index.js  intake.html  utils.js
src/css/: plantary.css  styles.css
