[package]
name = "plantary-nft"
version = "0.1.0"
authors = ["plantary team <lenara@verle.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
#serde_json = "1.0.57"

near-sdk = "2.0.0"

rand = "0.7.3"
rand_chacha = "0.2.2"
lazy_static = "1.4.0"
rand_seeder = "0.2.1"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
